Fixed edge overlap while dragging

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -206,6 +206,11 @@ html, body {
     opacity: 0.4;
     z-index: 1;
 
+    &.edge-moving {
+        z-index: 4;
+        opacity: 1;
+    }
+
     &.critical {
         height: 2px;
         opacity: 1;
